--- a/index.html
+++ b/index.html
@@ -80,6 +80,122 @@
                 </div>
             </div>
         </main>
+        <!-- Add this section before the footer in your index.html -->
+<div class="developer-credits glass-card" style="margin-top: 4rem;">
+    <div style="text-align: center; margin-bottom: 2rem;">
+        <h3><i class="fas fa-code"></i> Developer Credits</h3>
+        <p style="color: rgba(255, 255, 255, 0.8); margin-bottom: 2rem;">
+            This EcoSmart Dustbin system is developed for demonstration purposes
+        </p>
+    </div>
+
+    <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; margin-bottom: 2rem;">
+        <!-- Developer Info -->
+        <div class="credit-section">
+            <h4><i class="fas fa-user-tie" style="color: #00ff87;"></i> Developed By</h4>
+            <p style="font-size: 1.2rem; font-weight: 600; color: #ffffff; margin: 0.5rem 0;">
+                Tamil Amirthan & Team
+            </p>
+            <p style="color: rgba(255, 255, 255, 0.7); font-size: 0.9rem;">
+                IoT & Full-Stack Development Team
+            </p>
+        </div>
+
+        <!-- Purpose -->
+        <div class="credit-section">
+            <h4><i class="fas fa-lightbulb" style="color: #60efff;"></i> Project Purpose</h4>
+            <p style="color: rgba(255, 255, 255, 0.8);">
+                Smart Waste Management System Demo<br>
+                <small>Showcasing IoT integration with real-time web applications</small>
+            </p>
+        </div>
+    </div>
+
+    <!-- Tech Stack -->
+    <div style="border-top: 1px solid rgba(255, 255, 255, 0.1); padding-top: 2rem;">
+        <h4 style="text-align: center; margin-bottom: 2rem;">
+            <i class="fas fa-layer-group" style="color: #ff6b6b;"></i> Technology Stack
+        </h4>
+        
+        <div class="tech-grid">
+            <!-- Frontend -->
+            <div class="tech-category">
+                <h5><i class="fas fa-palette"></i> Frontend</h5>
+                <div class="tech-tags">
+                    <span class="tech-tag">HTML5</span>
+                    <span class="tech-tag">CSS3 Glassmorphism</span>
+                    <span class="tech-tag">JavaScript ES6+</span>
+                    <span class="tech-tag">Progressive Web App</span>
+                </div>
+            </div>
+
+            <!-- Backend & Database -->
+            <div class="tech-category">
+                <h5><i class="fas fa-database"></i> Backend & Database</h5>
+                <div class="tech-tags">
+                    <span class="tech-tag">Firebase Realtime DB</span>
+                    <span class="tech-tag">Cloud Functions</span>
+                    <span class="tech-tag">WebSocket Connections</span>
+                    <span class="tech-tag">RESTful APIs</span>
+                </div>
+            </div>
+
+            <!-- Libraries & Tools -->
+            <div class="tech-category">
+                <h5><i class="fas fa-tools"></i> Libraries & Tools</h5>
+                <div class="tech-tags">
+                    <span class="tech-tag">HTML5-QRCode</span>
+                    <span class="tech-tag">Font Awesome Icons</span>
+                    <span class="tech-tag">Google Fonts</span>
+                    <span class="tech-tag">Local Storage API</span>
+                </div>
+            </div>
+
+            <!-- Deployment -->
+            <div class="tech-category">
+                <h5><i class="fas fa-cloud"></i> Deployment</h5>
+                <div class="tech-tags">
+                    <span class="tech-tag">Netlify Hosting</span>
+                    <span class="tech-tag">HTTPS/SSL</span>
+                    <span class="tech-tag">Mobile Responsive</span>
+                    <span class="tech-tag">Cross-Browser Compatible</span>
+                </div>
+            </div>
+
+            <!-- Hardware Integration -->
+            <div class="tech-category">
+                <h5><i class="fas fa-microchip"></i> Hardware (Planned)</h5>
+                <div class="tech-tags">
+                    <span class="tech-tag">Arduino IoT</span>
+                    <span class="tech-tag">Load Cell Sensors</span>
+                    <span class="tech-tag">NIR Sensors</span>
+                    <span class="tech-tag">LCD Display</span>
+                </div>
+            </div>
+
+            <!-- Development Tools -->
+            <div class="tech-category">
+                <h5><i class="fas fa-laptop-code"></i> Development</h5>
+                <div class="tech-tags">
+                    <span class="tech-tag">PyCharm IDE</span>
+                    <span class="tech-tag">Git Version Control</span>
+                    <span class="tech-tag">Chrome DevTools</span>
+                    <span class="tech-tag">Firebase Console</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Demo Note -->
+    <div style="background: rgba(255, 193, 7, 0.1); border: 1px solid rgba(255, 193, 7, 0.3); border-radius: 10px; padding: 1.5rem; margin-top: 2rem; text-align: center;">
+        <i class="fas fa-info-circle" style="color: #ffc107; font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
+        <p style="margin: 0; color: rgba(255, 255, 255, 0.9);">
+            <strong>Demo Version:</strong> This is a fully functional prototype demonstrating the complete workflow 
+            of our smart waste management system. Hardware integration and production deployment ready.
+        </p>
+    </div>
+</div>
+
 
         <!-- Footer -->
         <footer class="glass-card footer">
