--- a/user/index.html
+++ b/user/index.html
@@ -7,6 +7,21 @@
     <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- PWA Manifest -->
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#764ba2">
+
+<!-- PWA Meta Tags -->
+<meta name="mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="EcoSmart">
+
+<!-- PWA Icons -->
+<link rel="apple-touch-icon" href="/assets/images/icon-192x192.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/assets/images/icon-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/assets/images/icon-512x512.png">
+
 </head>
 <body>
     <div class="stars"></div>
