--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="glass-card header">
             <div class="logo">
                 <i class="fas fa-recycle"></i>
-                <h1>EcoSmart Dustbin</h1>
+                <h1>EcoSmart Dustbin</h1><sub> Tamizh amirthan & team</sub>
             </div>
             <div class="subtitle">Smart Waste • Real Rewards • Sustainable Future</div>
         </header>
